<resources>
    <string name="app_name">KeepTime</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="failed_invalid_attribute">One or more fields are invalid</string>
    <string name="failed_network">Network error</string>
    <string name="failed_no_response">Cannot connect to website</string>
    <string name="failed_server">Server error</string>
    <string name="failed_unchanged">The resource is unchanged</string>
    <string name="failed_unknown">Unknown error</string>
    <string name="info">Additional information</string>
    <string name="refresh">Refresh</string>
    <string name="required">Required</string>
    <string name="save">Save</string>
    <string name="status">Status</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="failed_wrong_credentials">Wrong credentials or locked account</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >23 characters</string>
    <string name="invalid_server">Not a valid URL</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server">Server</string>

    <!-- Navigation drawer -->
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_clients">Clients</string>
    <string name="menu_log">Log</string>
    <string name="menu_personal_log">Home page</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_user_preferences">Profile settings</string>
    <string name="menu_workers">Workers</string>
    <string name="menu_workspaces">Workspaces</string>


    <!-- Preferences -->
    <string name="invalid_bill_rate">Bill rate must be a number with at most two decimal digits</string>
    <string name="invalid_password_confirmation">Password confirmation does not match password</string>
    <string name="logout">Logout</string>
    <string name="logout_summary">Click here to logout</string>
    <string name="prompt_bill_rate">Bill rate</string>
    <string name="prompt_currency">Currency</string>
    <string name="prompt_password_confirmation">Password confirmation</string>
    <string name="select_currency">Select a currency</string>
    <string name="success_logout">Successfully logged out</string>
    <string name="success_update">Resource successfully updated</string>
    <string name="user_preference_summary">Tap to open user settings</string>
    <string name="title_activity_workspace">Workspace</string>
    <string name="invalid_worker">The three workers must be different</string>
    <string name="select_worker_1">Select first member</string>
    <string name="select_worker_2">Select second member</string>
    <string name="select_worker_3">Select third member</string>
    <string name="invalid_date">The chosen date is not valid</string>
    <string name="prompt_description">Insert description</string>
    <string name="prompt_worker_1">Choose worker 1 </string>
    <string name="prompt_worker_2">Choose worker 2 </string>
    <string name="prompt_worker_3">Choose worker 3 </string>
    <string name="prompt_hours">Add working hours</string>
    <string name="invalid_hours">The number of hours selected is not valid</string>
    <string name="new_subactivity">Add new subactivity</string>
    <string name="new_workingschedule">Add new working schedule</string>
    <string name="success_create">Resource created successfully </string>
    <string name="failed_create"> Resource not created</string>
    <string name="invalid_description">Description cannot be empty</string>
    <string name="finished">Finished</string>
    <string name="finish">Finish</string>
    <string name="missing_inputs">Missing inputs</string>
    <string name="prompt_working_date">Add working date</string>
    <string name="prompt_delivery_date">Choose a delivery date</string>

    <!-- Project -->
    <string name="project_commission">This project is followed by <font fgcolor="#FF0000">%1$s</font> for %2$s.</string>
</resources>
