<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/menu_personal_log" />

        <item
            android:id="@+id/nav_workspaces"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_workspaces" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_local_atm_black_24dp"
            android:title="@string/menu_clients" />

    </group>

</menu>
