<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="2"
        android:title="@string/info"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="1"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
